--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
+
 <html>
-<head>
-  <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0; url=https://falixnodes.net/start?ip=game4.falixserver.net:45847">
+
+	<title>MyServer - Official Website</title>
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/stylesheet.css">
 </head>
 <body>
-  <form action="https://falixnodes.net/start" method="GET">
-    <input type="text" name="ip" value="game4.falixserver.net:45847">
-    <button type="submit">Continue</button>
-  </form>
+	<div class="title">
+		<h1>How to Start the Server</h1>
+	</div>
+
+	<div class="ph">
+		<h2>Phone</h2>
+	</div>
+
+	<div class="instruction">
+		<ol>
+		<li>Download and install the Minecraft app from the Google Play Store.    </li>
+		<li>Open the app and tap "Play".</li>
+		<li>Tap "Servers" at the bottom of the screen.</li>
+		<li>Tap "Add Server".</li>
+		<li>Enter a name for the server (e.g. HexCraft).</li>
+		<li>Enter the server address (e.g. 46.4.94.213:45847).</li>
+		<li>Tap "Save".</li>
+		<li>Tap the server name to connect.</li>
+		</ol>
+	</div>
+
+	<div class="ph">
+	<h2>PC</h2>
+    </div>
+
+	<div class="instruction">
+		<ol>
+		<li>Download and install Minecraft from the official website.</li>
+		
+		<li>Open Minecraft and click "Multiplayer".</li>
+		<li>Click "Add Server".</li>
+		<li>Enter a name for the server (e.g. HexCraft).</li>
+		<li>Enter the server address (e.g. 46.4.94.213:45847).</li>
+		<li>Click "Done".</li>
+		<li>Click the server name to connect.</li>
+		</ol>
+	</div>
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+	<script src="js/firefly.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
+
 </body>
 </html>
